@@ -19,4 +19,4 @@ And install LiTE-examples using:
 NuttX
 =====
 
-On NuttX, copy the LiTE-examples directory to your NuttX apps/examples/ directory.
+On NuttX, copy the LiTE-examples directory to your NuttX apps/examples/ directory, renaming it LiTE.
