@@ -28,13 +28,6 @@
 #include "D.h"
 #endif
 
-/* macro to be used after the lite_main() function */
-#ifdef LITE_MAIN_ENTRYPOINT
-#define LITE_MAIN()
-#else
-#define LITE_MAIN() int main( int argc, char *argv[] ) { return lite_main( argc, argv ); }
-#endif
-
 static void button1_press( LiteButton *button1, void *data )
 {
      LiteButtonState  state;
@@ -71,7 +64,7 @@ static void button3_press( LiteButton *button3, void *data )
      lite_close_window( window );
 }
 
-int lite_main( int argc, char *argv[] )
+int main( int argc, char *argv[] )
 {
      DFBRectangle  rect;
      LiteWindow   *window;
@@ -116,5 +109,3 @@ int lite_main( int argc, char *argv[] )
 
      return 0;
 }
-
-LITE_MAIN()
