@@ -24,13 +24,6 @@
 #include <lite/lite.h>
 #include <lite/window.h>
 
-/* macro to be used after the lite_main() function */
-#ifdef LITE_MAIN_ENTRYPOINT
-#define LITE_MAIN()
-#else
-#define LITE_MAIN() int main( int argc, char *argv[] ) { return lite_main( argc, argv ); }
-#endif
-
 static int on_window_resize( LiteWindow *window, int width, int height )
 {
      lite_close_window( window );
@@ -38,7 +31,7 @@ static int on_window_resize( LiteWindow *window, int width, int height )
      return 1;
 }
 
-int lite_main( int argc, char *argv[] )
+int main( int argc, char *argv[] )
 {
      DFBRectangle  rect;
      LiteWindow   *window;
@@ -81,5 +74,3 @@ int lite_main( int argc, char *argv[] )
 
      return 0;
 }
-
-LITE_MAIN()
