@@ -24,13 +24,6 @@
 #include <lite/progressbar.h>
 #include <lite/window.h>
 
-/* macro to be used after the lite_main() function */
-#ifdef LITE_MAIN_ENTRYPOINT
-#define LITE_MAIN()
-#else
-#define LITE_MAIN() int main( int argc, char *argv[] ) { return lite_main( argc, argv ); }
-#endif
-
 #define TIMEOUT 50
 
 static int timeout_id;
@@ -58,7 +51,7 @@ static DFBResult timeout_cb( void *data )
      return DFB_OK;
 }
 
-int lite_main( int argc, char *argv[] )
+int main( int argc, char *argv[] )
 {
      DFBRectangle     rect;
      LiteWindow      *window;
@@ -90,5 +83,3 @@ int lite_main( int argc, char *argv[] )
 
      return 0;
 }
-
-LITE_MAIN()
