@@ -24,13 +24,6 @@
 #include <lite/textline.h>
 #include <lite/window.h>
 
-/* macro to be used after the lite_main() function */
-#ifdef LITE_MAIN_ENTRYPOINT
-#define LITE_MAIN()
-#else
-#define LITE_MAIN() int main( int argc, char *argv[] ) { return lite_main( argc, argv ); }
-#endif
-
 static void on_enter( const char *text, void *data )
 {
      LiteTextLine *textline2 = data;
@@ -68,7 +61,7 @@ static void on_enter( const char *text, void *data )
      lite_close_window( window );
 }
 
-int lite_main( int argc, char *argv[] )
+int main( int argc, char *argv[] )
 {
      DFBRectangle  rect;
      LiteWindow   *window;
@@ -108,5 +101,3 @@ int lite_main( int argc, char *argv[] )
 
      return 0;
 }
-
-LITE_MAIN()
